syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-auth/api/proto/v1";

message CheckNicknameAvailabilityRequest {
  string nickname = 1;
}

message CheckNicknameAvailabilityResponse {
  bool available = 1;
}
