syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-auth/api/proto/v1";

message SetNicknameRequest {
  string id = 1;
  string nickname = 2;
}

message SetNicknameResponse {
  string message = 1;
}
